--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 spring.sql.init.mode=always
+spring.sql.init.encoding=UTF-8
+
+spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.url=jdbc:h2:file:./db/filmorate;MODE=PostgreSQL;CASE_INSENSITIVE_IDENTIFIERS=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
+
 spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
