feat: теперь можно искать фильмы на кинопоиске

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 
 spring.datasource.connectionProperties=useUnicode=true;characterEncoding=utf-8;
+
+kinopoisk-server.url=https://kinopoiskapiunofficial.tech
